# opencv

./: .gitignore  CMakeLists.txt  OpenCVWIN32.sln
OpenCVWIN32/: OpenCVWIN32.aps  OpenCVWIN32.cpp  OpenCVWIN32.rc  OpenCVWIN32.vcxproj  ReadMe.txt  Resource.h
OpenCVWIN32/Debug/: vc140.idb
OpenCVWIN32/x64/Debug/: vc140.idb
OpenCVWIN32/x64/Release/: OpenCVWIN32.res
include/: yolo_v2_class.hpp
src/: OpenCVWIN32.cpp  OpenCVWIN32.rc  OpenCVWIN32.vcxproj.filters  stdafx.cpp
src/Debug/: OpenCVWIN32.res
src/x64/Debug/: vc140.idb
src/x64/Release/: OpenCVWIN32.res
